# union-fsspec

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
union_fsspec/tests/: test_all.py
